# My_C_code_FEM_project

./: .gitignore  README.md  run.sh
Gid_Problem/: copy.sh
Gid_Problem/TinyFem_c8.gid/: TinyFem.bas  TinyFem.cnd
Gid_Problem/TinyFem_q4.gid/: TinyFem.bas  TinyFem.cnd
Gid_Problem/TinyFem_t3.gid/: TinyFem.bas  TinyFem.cnd
Gid_Problem/TinyFem_w4.gid/: TinyFem.bas  TinyFem.bat  TinyFem.cnd
TinyFem.gid/: TinyFem.bas  TinyFem.bat  TinyFem.cnd
mate/: exam1.mat  exam11.mat  exam2.mat  exam3.mat  exam8.mat
mesh/: exam10.msh  exam11.msh  exam12.msh  exam4.msh  exam5.msh  exam6.msh  exam7.msh  exam8.msh  exam9.msh  overview.md
mesh/exam1.gid/: exam1.cnd  exam1.geo  exam1.lin  exam1.msh  exam1.post.msh  exam1.post.res
mesh/exam10.gid/: exam10.cnd  exam10.geo  exam10.lin  exam10.msh  exam10.post.msh  exam10.post.res
mesh/exam11.gid/: exam11.lin  exam11.msh  exam11.post.res  exam11.rdr
mesh/exam12.gid/: exam12.geo  exam12.lin  exam12.msh  exam12.post.msh  exam12.post.res  exam12.rdr
mesh/exam2.gid/: exam2.geo  exam2.lin  exam2.msh  exam2.post.msh  exam2.post.res  exam2.rdr
src/: CMakeLists.txt  ReadMate.c  ReadMate.h  ReadMesh.c  ReadMesh.h  TinyFem.c  calc_shap.c  calc_shap.h  check_and_show.c  check_and_show.h  clear_data.c  clear_data.h  elemcalc.c  elemcalc.h  export_mesh.c  export_mesh.h  fem.h  gaussain.c  gaussain.h  initial.c  initial.h  makefile  matrix_compose.c  matrix_compose.h  matrix_solve.c  matrix_solve.h  resault_compose.c  resault_compose.h  shap_func.c  shap_func.h  tools.c  tools.h  write_mesh.c  write_mesh.h  write_resault.c  write_resault.h
(+38 files in other folders)
