cmake_minimum_required(VERSION 3.17)
project(tinyfem)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_C_STANDARD 11)
aux_source_directory(. DIR_SRCS)
add_executable(${PROJECT_NAME} ${DIR_SRCS})
target_link_libraries(${PROJECT_NAME} /mnt/d/Allo_Test/test.fem/AztecOO/libaztec.a)
target_link_libraries(${PROJECT_NAME} /mnt/d/Allo_Test/test.fem/CLAPACK/liblapack.a)
target_link_libraries(${PROJECT_NAME} m)
include_directories (/mnt/d/Allo_Test/test.fem/AztecOO)
#set(EXECUTABLE_OUTPUT_PATH /mnt/d/Allo_Test/test.fem/My_C_code_FEM_project)
#execute_process(tinyfem exam1)
